# Graph-AI-

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  docs-index.md  pyproject.toml
chapters/ch01-foundations/: README.md
chapters/ch01-foundations/applications/: advanced.md
chapters/ch02-graph-embeddings/: README.md
chapters/ch03-gnns/: README.md
chapters/ch03-gnns/applications/: medium.md
chapters/ch03-gnns/code/: README.md
chapters/ch04-production-pipelines/: README.md
chapters/ch05-advanced-use-cases/: README.md
chapters/ch05-advanced-use-cases/applications/: easy.md
chapters/chapter-1/: README.md
chapters/chapter-2/: README.md
chapters/chapter-3/: README.md
chapters/chapter-4/: README.md
chapters/chapter-5/: README.md
docs/: present.md
scripts/: run_demo.py
visuals/assets/: theme.css  use-cases.json
visuals/demos/: chapter-1-centrality.html  chapter-2-communities.html  chapter-3-shortest-path.html  chapter-4-temporal.html  chapter-5-reasoning.html
